name:               aip
version:            0.0.1
license:            BSD3
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Tony Morris (c) 2017
synopsis:           Aeronautical Information Package (AIP)
category:           Data, Aviation
description:        Document managament for the airservices Aeronautical Information Package (AIP)
homepage:           https://github.com/tonymorris/aip
bug-reports:        https://github.com/tonymorris/aip/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog, todo.md

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/aip.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , HTTP
                    , network-uri
                    , tagsoup
                    , tagsoup-selection
                    , transformers
                    , parsers
                    , parsec
                    , digit
                    , lens
                    , download
                    , bytestring
                    
  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.Aip
                    Data.Aviation.Aip.Request
                    Data.Aviation.Aip.Types
                    Data.Aviation.Aip.Types.Aip
                    Data.Aviation.Aip.Types.AipBook
                    Data.Aviation.Aip.Types.AipBooks
                    Data.Aviation.Aip.Types.AipBookTypes
                    Data.Aviation.Aip.Types.AipChart
                    Data.Aviation.Aip.Types.AipCharts
                    Data.Aviation.Aip.Types.AipDAH
                    Data.Aviation.Aip.Types.AipDAHs
                    Data.Aviation.Aip.Types.AipDAP
                    Data.Aviation.Aip.Types.AipDAPs
                    Data.Aviation.Aip.Types.AipDate
                    Data.Aviation.Aip.Types.AipERSA
                    Data.Aviation.Aip.Types.AipERSAs
                    Data.Aviation.Aip.Types.AipHref
                    Data.Aviation.Aip.Types.AipPg
                    Data.Aviation.Aip.Types.AipPrecisionObstacleChart
                    Data.Aviation.Aip.Types.AipPrecisionObstacleCharts
                    Data.Aviation.Aip.Types.AipSummarySUP_AIC
                    Data.Aviation.Aip.Types.AipSummarySUP_AICs
                    Data.Aviation.Aip.Types.AipSupplementsAIC
                    Data.Aviation.Aip.Types.AipSupplementsAICs
                    Data.Aviation.Aip.Types.Day
                    Data.Aviation.Aip.Types.Link
                    Data.Aviation.Aip.Types.Month
                    Data.Aviation.Aip.Types.Year

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8
                    , parsec >= 3.1
                    , quickcheck-text

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
