name:               aip
version:            0.0.1
license:            BSD3
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Tony Morris (c) 2017
synopsis:           Aeronautical Information Package (AIP)
category:           Data, Aviation
description:        Document managament for the airservices Aeronautical Information Package (AIP)
homepage:           https://github.com/tonymorris/aip
bug-reports:        https://github.com/tonymorris/aip/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog, todo.md

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/aip.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , HTTP >= 4000 && < 5000
                    , network-uri >= 2.6 && < 3
                    , tagsoup >= 0.13 && < 0.14
                    , tagsoup-selection >= 0.1 && < 0.2
                    , transformers >= 0.5 && < 0.6
                    , parsers >= 0.12 && < 0.13
                    , parsec >= 3.1 && < 3.2
                    , digit >= 0.2 && < 0.3
                    , bytestring >= 0.10 && < 0.11
                    , filepath >= 1.4 && < 1.5
                    , directory >= 1.3 && < 1.4
                    , papa >= 0.3 && < 0.4
                    
  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.Aip
                    Data.Aviation.Aip.AipDate
                    Data.Aviation.Aip.AipDocument
                    Data.Aviation.Aip.AipDocuments
                    Data.Aviation.Aip.AipHref
                    Data.Aviation.Aip.AipPg
                    Data.Aviation.Aip.ConnErrorHttp4xx
                    Data.Aviation.Aip.Day
                    Data.Aviation.Aip.Ersa
                    Data.Aviation.Aip.Ersas
                    Data.Aviation.Aip.HttpRequest
                    Data.Aviation.Aip.Month
                    Data.Aviation.Aip.Year

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8
                    , parsec >= 3.1
                    , quickcheck-text

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
